--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Inicio de sesión</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="./main.js" ></script>
+    <script type="module" src="./Estructuras/ArbolAVL.js" ></script>
 </head>
 <body>
     <h1>Iniciar sesión</h1>
