--- a/Admin_Dashboard/admin.html
+++ b/Admin_Dashboard/admin.html
@@ -17,7 +17,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-    <script src="admin.js" type="module"></script>
   <link rel="stylesheet" type="text/css" href="">
 </head>
 
@@ -49,9 +48,8 @@
           <a class="nav-link disabled" href="./carga.html">Carga Masiva</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <button class="btn btn-danger my-2 my-sm-0" type="submit" onclick="logout()">Log out</button>
-      </form>
+      <a href="#" id="logout">Cerrar sesión</a>
+      <script src="logout.js"></script>
     </div>
   </nav>
 
