--- a/Admin_Dashboard/arbol.html
+++ b/Admin_Dashboard/arbol.html
@@ -18,7 +18,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-    <script src="admin.js" type="module"></script>
     <script src="reporte.js" type="module"></script>
 </head>
 <body>
@@ -49,9 +48,8 @@
               <a class="nav-link disabled" href="./carga.html">Carga Masiva</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-danger my-2 my-sm-0" type="submit" onclick="logout()">Log out</button>
-          </form>
+          <a href="#" id="logout">Cerrar sesión</a>
+          <script src="logout.js"></script>
         </div>
       </nav>
     <div class="cont">
