dashboard admin terminado

--- a/Admin_Dashboard/arbol.html
+++ b/Admin_Dashboard/arbol.html
@@ -36,9 +36,9 @@
                 Mostrar Alumnos
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">In orden</a>
-                <a class="dropdown-item" href="#">Pre orden</a>
-                <a class="dropdown-item" href="#">Pos orden</a>
+                <a class="dropdown-item" href="./inorden.html">In orden</a>
+                <a class="dropdown-item" href="./preorden.html">Pre orden</a>
+                <a class="dropdown-item" href="./posorden.html">Pos orden</a>
               </div>
             </li>
             <li class="nav-item">
