--- a/Admin_Dashboard/inorden.html
+++ b/Admin_Dashboard/inorden.html
@@ -18,7 +18,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
   integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
   crossorigin="anonymous"></script>
-  <script src="carga.js" type="module"></script> 
+  <script src="inorden.js" type="module"></script>
 </head>
 
 <body>
@@ -53,14 +53,17 @@
       <script src="logout.js"></script>
     </div>
   </nav>
-
-
-  <div class="containb">
-          <input type="file" id="jsonFile">
-
-      </div>
   </div>
-  
+  <table id="tablaEstudiantes" class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Carnet</th>
+        <th>Nombre</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 </body>
 
 </html>
