--- a/User_Dashboard/bitacora.html
+++ b/User_Dashboard/bitacora.html
@@ -17,6 +17,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
     <script src="./principal.js" type="module"></script>
+    <script src="./reporteBitacora.js" type="module"></script>
     <title>Main Page</title>
 </head>
 <body>
@@ -44,5 +45,8 @@
           <script src="../Admin_Dashboard/logout.js"></script>
         </div>
       </nav>
+      <div class="cont">
+        <img id="image" alt="bitacora">
+    </div>
 </body>
 </html>
