--- a/User_Dashboard/archivos_arbol.html
+++ b/User_Dashboard/archivos_arbol.html
@@ -17,8 +17,8 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
     <script src="./principal.js" type="module"></script>
-    <script src="./reporteBitacora.js" type="module"></script>
-    <title>Bitacora</title>
+    <script src="./reporteArbol.js" type="module"></script>
+    <title>archivos</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +46,7 @@
         </div>
       </nav>
       <div class="cont">
-        <img id="image" alt="bitacora">
+        <img id="image" alt="archivos">
     </div>
 </body>
 </html>
