eliminar y bitacora actualizado

--- a/User_Dashboard/main_page.html
+++ b/User_Dashboard/main_page.html
@@ -56,7 +56,7 @@
 </div>
 <div class="carpent">
   <button type="button" class="btn btn-outline-success" id="btncrear">Crear Carpeta</button>
-  <button type="button" class="btn btn-outline-danger">Eliminar Carpeta</button>
+  <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal">Eliminar Carpeta</button>
 </div>
 
 <div class="modal fade" id="miModal" tabindex="-1" aria-labelledby="miModalLabel" aria-hidden="true">
@@ -64,7 +64,9 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="miModalLabel">Ingrese la ruta de la nueva carpeta</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="cerrar">X</button>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
       <div class="modal-body">
         <input type="text" class="form-control" id="miCampo" placeholder="/ruta">
@@ -76,6 +78,32 @@
     </div>
   </div>
 </div>
+
+
+<!--Modal 2 para elminar-->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Aviso</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ¿ Desea Eliminar la carpeta de la ruta actual ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+        <button type="button" class="btn btn-success" id="btnSi">Si</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 
