--- a/User_Dashboard/main_page.html
+++ b/User_Dashboard/main_page.html
@@ -70,10 +70,15 @@
 
 
 
+
 <div class="carpent">
   <button type="button" class="btn btn-outline-success" id="btncrear">Crear Carpeta</button>
   <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal">Eliminar Carpeta</button>
-  <input id="img" type="file" accept="image/png, image/gif, image/jpeg" />
+  <label for="subirArchivo" style="display: inline-block; position: relative; width: 100px; height: 100px; border: 1px solid #ddd; border-radius: 50%; text-align: center; line-height: 100px;">
+    <i class="fa-solid fa-cloud-arrow-up" style="color: #1860dc; font-size: 50px;"></i>
+    <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); opacity: 0; transition: all 0.3s;">Subir archivo</span>
+  </label>
+  <input id="subirArchivo" type="file" accept="image/jpg,image/png,image/gif, image/jpeg,.txt,.pdf" style="display: none;">
 </div>
 
 <div class="modal fade" id="miModal" tabindex="-1" aria-labelledby="miModalLabel" aria-hidden="true">
@@ -128,3 +133,4 @@
 
 </body>
 </html>
+
